force-app/main/objects/Courses__c.object
<CustomObject>
    <fields>
        <fullName>Sundries__c</fullName>
        <label>Sundries</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Language__c</fullName>
        <description>Created for Qualtrics and is being used in Outbound message.</description>
        <label>Survey Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN-GB</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>FR</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>ZH-S</fullName>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>NL</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>PT-BR</fullName>
                    <label>Brazilian Portuguese</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>DA</fullName>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>FI</fullName>
                    <label>Finnish</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>SV</fullName>
                    <label>Swedish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Course_Price__c</fullName>
        <description>For those courses invoiced at course level not per booking</description>
        <inlineHelpText>For those courses invoiced at course level not per booking
Prices are now fixed in Sun based on agreed price and delegate numbers</inlineHelpText>
        <label>Incompany Course Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Email_Address__c</fullName>
        <label>Training Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Transferred_Course__c</fullName>
        <label>Transferred Course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Materials__c</fullName>
        <label>UK Materials</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Value__c</fullName>
        <label>Upsell Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <label>Venue Address</label>
        <type>TextArea</type>
    </fields>
    <label>Courses</label>
    <listViews>
        <fullName>AT_ANZ_All_Courses_before_today</fullName>
        <columns>NAME</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Australia - AU1,New Zealand - NZ1</value>
        </filters>
        <filters>
            <field>Course_Type__c</field>
            <operation>notEqual</operation>
            <value>System</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2013</value>
        </filters>
        <label>ANZ All Courses (before today)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AT_ANZ_SPN_Courses_before_today</fullName>
        <columns>Course_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Partner_Account_Name__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Duration__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Australia - AU1,New Zealand - NZ1</value>
        </filters>
        <filters>
            <field>Course_Type__c</field>
            <operation>notEqual</operation>
            <value>System</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Status__c</field>
            <operation>notContain</operation>
            <value>cancelled</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>contains</operation>
            <value>SPN</value>
        </filters>
        <label>ANZ SPN Courses (before today)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ANZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AT_ANZ_SPN_Courses_from_today</fullName>
        <columns>Course_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Rooms_Booked__c</columns>
        <columns>Catering_Booked__c</columns>
        <columns>Duration__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Australia - AU1,New Zealand - NZ1</value>
        </filters>
        <filters>
            <field>Course_Type__c</field>
            <operation>notEqual</operation>
            <value>System</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Status__c</field>
            <operation>notContain</operation>
            <value>cancelled</value>
        </filters>
        <filters>
            <field>Course_Description__c</field>
            <operation>contains</operation>
            <value>SPN</value>
        </filters>
        <label>ANZ SPN Courses (from today)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ANZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAmericasCourses</fullName>
        <columns>NAME</columns>
        <columns>Course_Category__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_DurationOld__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Free_Spaces__c</columns>
        <columns>Course_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Category__c</field>
            <operation>notContain</operation>
            <value>Internal</value>
        </filters>
        <filters>
            <field>Course_Status__c</field>
            <operation>notContain</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Course_BU__c</field>
            <operation>equals</operation>
            <value>US,Canada</value>
        </filters>
        <filters>
            <field>Course_Type__c</field>
            <operation>notContain</operation>
            <value>System Training</value>
        </filters>
        <label>Americas Courses (+ today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_China_Courses</fullName>
        <columns>Course_Name__c</columns>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Price__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Course_Free_Spaces__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>China - CN1</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>China All Courses (+ today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_China_Courses_todays_date</fullName>
        <columns>Course_Name__c</columns>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>China - CN1</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <label>China All Courses (- today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Glenn_s_Courses</fullName>
        <columns>NAME</columns>
        <columns>Course_Status__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Category__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Date_JI_First_Sent__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_BU__c</field>
            <operation>equals</operation>
            <value>China,Hong Kong,Malaysia,Singapore,Taiwan,Thailand</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Type__c</field>
            <operation>notContain</operation>
            <value>System,Job Profiling,Internal,System Training</value>
        </filters>
        <label>CN/HK/SG - All Courses (+ today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hong_Kong_Courses</fullName>
        <columns>Course_Name__c</columns>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Hong Kong - HK1</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <label>Hong Kong All Courses (+ today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Hong_Kong_Courses_2011</fullName>
        <columns>Course_Name__c</columns>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_BU__c</field>
            <operation>equals</operation>
            <value>Hong Kong</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Hong Kong All Courses (- today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Singapore_Courses_befor_today_s_date</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>NAME</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_BU__c</field>
            <operation>equals</operation>
            <value>Singapore,Malaysia</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Singapore All Courses (- today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Singapore_Courses_from_today_s_date</fullName>
        <columns>Course_Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>NAME</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_BU__c</field>
            <operation>equals</operation>
            <value>Singapore,Malaysia</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Status__c</field>
            <operation>notContain</operation>
            <value>cancelled</value>
        </filters>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Singapore - SG1</value>
        </filters>
        <label>Singapore All Courses (+ today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Americas_Courses_before_today_s_date</fullName>
        <columns>NAME</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Director__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_BU__c</field>
            <operation>equals</operation>
            <value>Canada,US</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Americas Courses (before today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Benelux_All_Pub_Courses_today_s_date</fullName>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Category__c</columns>
        <columns>Course_BU__c</columns>
        <columns>Course_Start_Date__c</columns>
        <columns>Course_End_Date__c</columns>
        <columns>Course_Venue__c</columns>
        <columns>Course_Confirmed_Total__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Course_Free_Spaces__c</columns>
        <columns>Course_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profit_Centre__c</field>
            <operation>equals</operation>
            <value>Belgium - BE5,Netherlands - NL5</value>
        </filters>
        <filters>
            <field>Course_Name__c</field>
            <operation>notContain</operation>
            <value>SODA</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Course_Category__c</field>
            <operation>equals</operation>
            <value>Public,In Company</value>
        </filters>
        <filters>
            <field>Course_Status__c</field>
            <operation>notContain</operation>
            <value>cancelled</value>
        </filters>
        <label>Benelux All Courses (+ today&apos;s date)</label>
    </listViews>
    <listViews>
        <fullName>CSIT_all_courses_today_s_date1</fullName>
        <columns>Course_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Category__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Maximum_Delegates__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Date_JI_First_Sent__c</columns>
        <columns>Course_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Type__c</field>
            <operation>equals</operation>
            <value>System Training</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Maximum_Delegates__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2024</value>
        </filters>
        <label>CSIT all courses (- today&apos;s date)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSIT_all_courses_today_s_date_2025</fullName>
        <columns>Course_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Category__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Maximum_Delegates__c</columns>
        <columns>Course_Provisional_Total__c</columns>
        <columns>Date_JI_First_Sent__c</columns>
        <columns>Course_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course_Type__c</field>
            <operation>equals</operation>
            <value>System Training</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Maximum_Delegates__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Course_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2025</value>
        </filters>
        <label>CSIT all courses (- today&apos;s date) 2025</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C{000000}</displayFormat>
        <label>Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <recordTypes>
        <fullName>In_company</fullName>
        <active>true</active>
        <label>In Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public</fullName>
        <active>true</active>
        <label>Public</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Bespoke_materials_mandatory</fullName>
        <active>true</active>
        <description>If the standard materials option is not checked then bespoke materials is mandatory.</description>
        <errorConditionFormula>AND(NOT ( Standard_Course_Materials__c  ), 
				ISBLANK( Bespoke_Material_Notes__c ) ) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorMessage>Please ensure you update the bespoke materials notes if the standard materials is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckNumber</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT($Permission.CSIT), NOT( ISNUMBER( Duration__c ) )) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>Invalid Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Course_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL(Course_Status__c,&apos;Completed&apos;), ISPICKVAL(Course_Status__c,&apos;Completed (assumed)&apos;)), NOT(OR(ISPICKVAL(Course_Type__c ,&quot;System Demo&quot;) , ISPICKVAL(Course_Type__c ,&quot;System Training&quot;))) , Course_End_Date__c &gt; TODAY()) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorMessage>Course status can not be set as completed before course end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseEndDateSmall</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name!=&quot;System Administrator&quot;,(Course_End_Date__c &lt; Course_Start_Date__c ), NOT(OR(ISPICKVAL(Course_Type__c ,&quot;System Demo&quot;) , ISPICKVAL(Course_Type__c ,&quot;System Training&quot;)))) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorMessage>Course End Date must be after Course Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Description_Mandatory</fullName>
        <active>true</active>
        <description>Course Description should be mandatory for all values other than System Training + system demo</description>
        <errorConditionFormula>AND($Profile.Name!=&quot;System Administrator&quot;,
ISBLANK(Course_Description__c),
NOT(OR(ISPICKVAL(Course_Type__c ,&quot;System Demo&quot;) , ISPICKVAL(Course_Type__c ,&quot;System Training&quot;)))) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorDisplayField>Course_Description__c</errorDisplayField>
        <errorMessage>Course Description is Mandatory for this Course Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Status_restricted_OAT</fullName>
        <active>false</active>
        <description>You can not set Invoice Status or Credit Status or Expense Credit Status or Expense Invoice Status to &apos;Complete&apos;.</description>
        <errorConditionFormula>IF($Profile.Name =&apos;OAT&apos;,
	IF( 
		OR(
			IF(
				ISCHANGED(Credit_Status__c),
				IF(
					OR(
						ISPICKVAL(Credit_Status__c, &apos;Completed via order&apos;),
						ISPICKVAL(Credit_Status__c, &apos;Queried&apos;),
						ISPICKVAL(Credit_Status__c, &apos;Ready to be credited&apos;),
						ISPICKVAL(Credit_Status__c, &apos;Ready for OAT&apos;),
						ISPICKVAL(Credit_Status__c, &apos;Unit transfer&apos;)
					),false,true
				),false
			),
			IF(
				ISCHANGED(Expense_Credit_Status__c),
				IF(
					OR(
						ISPICKVAL(Expense_Credit_Status__c, &apos;Completed via order&apos;),
						ISPICKVAL(Expense_Credit_Status__c, &apos;Queried&apos;),
						ISPICKVAL(Expense_Credit_Status__c, &apos;Ready to be credited&apos;),
						ISPICKVAL(Expense_Credit_Status__c, &apos;Ready for OAT&apos;),
						ISPICKVAL(Expense_Credit_Status__c, &apos;Unit transfer&apos;)
					),false,true
				),false
			),
			IF(
				ISCHANGED(Expense_Invoice_Status__c),
				IF(
					OR(
						ISPICKVAL(Expense_Invoice_Status__c, &apos;Completed via order&apos;),
						ISPICKVAL(Expense_Invoice_Status__c, &apos;Queried&apos;),
						ISPICKVAL(Expense_Invoice_Status__c, &apos;Ready to be invoiced&apos;),
						ISPICKVAL(Expense_Invoice_Status__c, &apos;Ready for OAT&apos;),
						ISPICKVAL(Expense_Invoice_Status__c, &apos;Unit transfer&apos;)
					),false,true
				),false
			),
			IF(
				ISCHANGED(Invoice_Status__c),
				IF(
					OR(
						ISPICKVAL(Invoice_Status__c, &apos;Completed via order&apos;),
						ISPICKVAL(Invoice_Status__c, &apos;Queried&apos;),
						ISPICKVAL(Invoice_Status__c, &apos;Ready to be invoiced&apos;),
						ISPICKVAL(Invoice_Status__c, &apos;Ready for OAT&apos;),
						ISPICKVAL(Invoice_Status__c, &apos;Unit transfer&apos;)
					),false,true
				),false
			)
		),true,
		false
		),
	false
)</errorConditionFormula>
        <errorMessage>You can not set Invoice Status or Credit Status or Expense Credit Status or Expense Invoice Status to &apos;Complete&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Status_restricted_SOE</fullName>
        <active>false</active>
        <description>You can not set Invoice Status or Credit Status or Expense Credit Status or Expense Invoice Status to &apos;Ready for OAT&apos; or &apos;Unit transfer&apos; or &apos;Ready for invoicing/crediting&apos;.</description>
        <errorConditionFormula>IF($Profile.Name =&apos;SOE&apos;,
IF( 
	OR(
		IF(
			ISCHANGED(Credit_Status__c),
			IF(
				OR(
					ISPICKVAL(Credit_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Complete&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Expense_Credit_Status__c),
			IF(
				OR(
					ISPICKVAL(Expense_Credit_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Expense_Credit_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Expense_Credit_Status__c, &apos;Completed&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Expense_Invoice_Status__c),
			IF(
				OR(
					ISPICKVAL(Expense_Invoice_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Expense_Invoice_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Expense_Invoice_Status__c, &apos;Completed&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Invoice_Status__c),
			IF(
				OR(
					ISPICKVAL(Invoice_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Complete&apos;)
				),false,true
			),false
		)
	),
	true,
	false
),
false
)</errorConditionFormula>
        <errorMessage>You can not set Invoice Status or Credit Status or Expense Credit Status or Expense Invoice Statusto &apos;Ready for OAT&apos; or &apos;Unit transfer&apos; or &apos;Ready for invoicing/crediting&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Status_restricted_training</fullName>
        <active>false</active>
        <description>You can not set Invoice Status or Credit Status or Expense Credit Status or Expense Invoice Status to &apos;Ready for invoicing/crediting&apos; or &apos;Completed&apos;.</description>
        <errorConditionFormula>IF($Profile.Name = &apos;Training Services UK&apos;,
IF( 
	OR(
		IF(
			ISCHANGED(Credit_Status__c),
			IF(
				OR(
					ISPICKVAL(Credit_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Unit Transfer&apos;),
					ISPICKVAL(Credit_Status__c, &apos;Ready for OAT&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Expense_Credit_Status__c),
			IF(
				OR(
					ISPICKVAL(Expense_Credit_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Expense_Credit_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Expense_Credit_Status__c, &apos;Unit Transfer&apos;),
					ISPICKVAL(Expense_Credit_Status__c, &apos;Ready for OAT&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Expense_Invoice_Status__c),
			IF(
				OR(
					ISPICKVAL(Expense_Invoice_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Expense_Invoice_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Expense_Invoice_Status__c, &apos;Unit Transfer&apos;),
					ISPICKVAL(Expense_Invoice_Status__c, &apos;Ready for OAT&apos;)
				),false,true
			),false
		),
		IF(
			ISCHANGED(Invoice_Status__c),
			IF(
				OR(
					ISPICKVAL(Invoice_Status__c, &apos;Completed via order&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Queried&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Unit Transfer&apos;),
					ISPICKVAL(Invoice_Status__c, &apos;Ready for OAT&apos;)
				),false,true
			),false
		)
	),
	true,
	false
),
false
)</errorConditionFormula>
        <errorMessage>You can not set Invoice Status or Credit Status or Expense Credit Status or Expense Invoice Status to &apos;Ready for invoicing/crediting&apos; or &apos;Completed&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_transfer_new_reference</fullName>
        <active>false</active>
        <description>If the course transfer checkbox field is selected, either the new or from course reference must be added.</description>
        <errorConditionFormula>AND ( 
ISPICKVAL( Transferred_Course__c ,&quot;Yes&quot;), 
Course_Transferred_To__c  =&quot;&quot;,
Course_Transferred_From__c  =&quot;&quot;
)</errorConditionFormula>
        <errorMessage>Please ensure you enter either the new or from course reference for the transferred course</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CreditStatusandSectionFields</fullName>
        <active>false</active>
        <errorConditionFormula>AND 
( 
ISPICKVAL(Credit_Status__c ,&quot;Ready to be credited&quot;), 
OR 
( 
ISNULL(Credit_Amount__c), 
ISPICKVAL(Credit_Reason__c,&quot;&quot;), 
Credit_Text_Description__c =&quot;&quot; 
) 
)</errorConditionFormula>
        <errorMessage>It is mandatory to enter the Incompany Course Credit Details section fields (except SUN Credit Note No. &amp; Credit note Notes) if the Credit Status is &quot;Ready to be Credited&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_order_ref_blank_check</fullName>
        <active>false</active>
        <description>Please ensure you add the customer order ref. (skipped for GCSC profile and automation process)</description>
        <errorConditionFormula>AND (
NOT ( ISBLANK( Partner_Account_Name__c )),
NOT ( Partner_Account_Name__r.PurchaseOrderRequired__c ),
ISBLANK (Customer_Order_Ref__c ),
NOT ( $Profile.Name = &apos;GCSC General&apos;)
) &amp;&amp; IsAutomationBypassed__c = false</errorConditionFormula>
        <errorMessage>Please ensure you add the customer order ref.</errorMessage>
    </validationRules>
</CustomObject>